--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -45,6 +45,16 @@
     grid-area: botao
 }
 
+.agenda__item {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.agenda__item img {
+    grid-column: 1/ 3;
+}
+
 @media screen and (min-width: 720px) {
     .banner {
         grid-template-columns: calc(50% - 0.75rem) auto auto;
@@ -58,5 +68,38 @@
     .banner img:nth-child(4) {
         grid-column: 3/4;
         grid-row: 1/3;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .categorias {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        grid-template-rows: auto auto auto ;
+        grid-template-areas: 
+            "texto texto"
+            "lista iniciar"
+            "lista imagem";
+        row-gap: 1rem;
+        column-gap: 1.5rem;
+        grid-template-columns: calc(50% - 0.75rem);
+        grid-template-rows: auto 1fr auto;
+    }
+
+    .categorias .categorias__titulo {
+        grid-area: texto;
+    }
+
+    .categorias .categorias__lista {
+        grid-area: lista;
+    }
+
+    .categorias .destaques__titulo{
+        grid-area: iniciar;
+    }
+
+    .categorias .categorias__imagem {
+        grid-area: imagem;
+        width: 100%;
     }
 }
